--- a/website/static/website/css/style.css
+++ b/website/static/website/css/style.css
@@ -26,7 +26,7 @@ header{
     padding: 10px;
 }
 header .logo{
-
+    font-family: 'Orbitron', sans-serif;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 0px;
