--- a/website/templates/website/BMX/BMXPage.html
+++ b/website/templates/website/BMX/BMXPage.html
@@ -12,7 +12,7 @@
                      </article>
                 </a>
             
-                <a href="brakesBMX.html"> 
+                <a href="/bmxbrakes">
                     <article> 
                         <h3>Brakes</h3>
                      </article>
